--- a/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/addCat.hbs
+++ b/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/addCat.hbs
@@ -1,29 +1,28 @@
-
-    <header>
-        <nav>
-            <ul class="navigation">
-                <li><a href="/">Home Page</a></li>
-                <li><a href="/cats/add-breed">Add Breed</a></li>
-                <li><a href="/cats/add-cat">Add Cat</a></li>
-            </ul>
-        </nav>
-        <h1>Cat Shelter</h1>
-    </header>
-    <main>
-        <form action="/cats/add-cat" method="post" class="cat-form">
-            <h2>Add Cat</h2>
-            <label for="name">Name</label>
-            <input name="name" type="text" id="name">
-            <label for="description">Description</label>
-            <textarea name="description" id="description"></textarea>
-            <label for="image">Image</label>
-            <input name="image" type="text" id="image">
-            <label for="group">Breed</label>
-            <select name="breed" id="group">
-                <option value="Fluffy Cat">Fluffy Cat</option>
-				<option value="Fluffy Cat">Fluffy Cat</option>
-				<option value="Fluffy Cat">Fluffy Cat</option>
-            </select>
-            <button type="submit">Add Cat</button>
-        </form>
-    </main>
+<header>
+    <nav>
+        <ul class="navigation">
+            <li><a href="/">Home Page</a></li>
+            <li><a href="/cats/add-breed">Add Breed</a></li>
+            <li><a href="/cats/add-cat">Add Cat</a></li>
+        </ul>
+    </nav>
+    <h1>Cat Shelter</h1>
+</header>
+<main>
+    <form action="/cats/add-cat" method="post" class="cat-form">
+        <h2>Add Cat</h2>
+        <label for="name">Name</label>
+        <input name="name" type="text" id="name">
+        <label for="description">Description</label>
+        <textarea name="description" id="description"></textarea>
+        <label for="image">Image</label>
+        <input name="image" type="text" id="image">
+        <label for="group">Breed</label>
+        <select name="breed" id="group">
+            {{#each breeds}}
+            <option value="{{breed}}">{{breed}}</option>
+            {{/each}}
+        </select>
+        <button type="submit">Add Cat</button>
+    </form>
+</main>
