--- a/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/home.hbs
+++ b/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/home.hbs
@@ -19,7 +19,7 @@
                 {{#each cats}}
                 <li>
                     <img src="{{image}}" alt="{{name}}">
-                    <h3></h3>
+                    <h3>{{name}}</h3>
                     <p><span>Breed: </span>{{breed}}</p>
                     <p><span>Description: </span>{{description}}</p>
                     <ul class="buttons">
