Edited cat to be saved in the db

--- a/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/editCat.hbs
+++ b/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/editCat.hbs
@@ -9,21 +9,21 @@
     <h1>Cat Shelter</h1>
 </header>
 <main>
-    <form action="#" method="post" class="cat-form">
+    <form action="/cat/{{cat.id}}" method="post" class="cat-form">
         <h2>Edit Cat</h2>
         <label for="name">Name</label>
-        <input type="text" id="name" value="{{cat.name}}">
+        <input type="text" id="name" value="{{cat.name}}" name="name">
         <label for="description">Description</label>
         <textarea
-            id="description">{{cat.description}}</textarea>
+            id="description" name="description">{{cat.description}}</textarea>
         <label for="image">Image</label>
-        <input type="text" id="image" value="{{cat.image}}">
+        <input type="text" id="image" value="{{cat.image}}" name="image">
         <label for="group">Breed</label>
         <select id="group" name="breed">
             {{#each breeds}}
                     <option value="{{breed}}">{{breed}}</option>
             {{/each}}
         </select>
-        <button>Edit Cat</button>
+        <button type="submit">Edit Cat</button>
     </form>
 </main>
