--- a/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/editCat.hbs
+++ b/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/editCat.hbs
@@ -9,7 +9,7 @@
     <h1>Cat Shelter</h1>
 </header>
 <main>
-    <form action="/cat/{{cat.id}}" method="post" class="cat-form">
+    <form action="/edit/cat/{{cat.id}}" method="post" class="cat-form">
         <h2>Edit Cat</h2>
         <label for="name">Name</label>
         <input type="text" id="name" value="{{cat.name}}" name="name">
