--- a/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/home.hbs
+++ b/JS Back End - Node.js - 2023/Cat Shelter - Node.js with Express/views/home.hbs
@@ -7,9 +7,9 @@
             </ul>
         </nav>
         <h1>Cat Shelter</h1>
-        <form action="/search">
-            <input type="text">
-            <button type="button">Search</button>
+        <form action="/" method="GET">
+            <input type="text" name="search">
+            <button>Search</button>
         </form>
     </header>
 
