--- a/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/accessory/attachAccessory.hbs
+++ b/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/accessory/attachAccessory.hbs
@@ -3,17 +3,20 @@
     <div class="form">
         <h2>{{cube.name}}</h2>
         <img class="cube" src="{{cube.imageUrl}}">
-        <form action="" method="">
+        <form method="POST">
             <label for="accessory">Accessories</label>
+            {{#if hasAccessories}}
             <select id="accessory" name="accessory" />
             {{#each accessories}}
-            <option value="{{name}}">{{name}}</option>
+            <option value="{{_id}}">{{name}}</option>
             {{/each}}
             </select>
             <input type="submit" value="Attach">
         </form>
+        {{else}}
         <h3 class="italic">This cube has all available accessories so far or there is no available at all...
         </h3>
-        <a class="btn" href="#">Back</a>
+        {{/if}}
+        <a class="btn" href="/cube/details/{{cube._id}}">Back</a>
     </div>
 </main>
