--- a/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/details.hbs
+++ b/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/details.hbs
@@ -5,12 +5,12 @@
     <p><span>Description:</span>{{cube.description}}</p>
     <p><span>Difficulty level:</span> {{cube.difficultyLevel}}</p>
     <a class="btn" href="/">Back</a>
-    <a class="btn" href="/accessory/attach/{{cube._id}}">Attach</a>
+    <a class="btn" href="/cube/attach/{{cube._id}}">Attach</a>
   </div>
   <h2>Accessories</h2>
   <div class="accessories">
     {{#if hasAccessories}}
-    {{#each accessories}}
+    {{#each cube.accessories}}
     <div class="accessory">
       <img src="{{imageUrl}}" alt="{{name}}">
       <h3>{{name}}</h3>
