--- a/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/details.hbs
+++ b/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/details.hbs
@@ -5,9 +5,11 @@
     <p><span>Description:</span>{{cube.description}}</p>
     <p><span>Difficulty level:</span> {{cube.difficultyLevel}}</p>
     <a class="btn" href="/">Back</a>
+    {{#if isCreator}}
     <a class="btn" href="/cube/attach/{{cube._id}}">Attach</a>
     <a class="btn" href="/cube/edit/{{cube._id}}">Edit</a>
     <a class="btn" href="/cube/delete/{{cube._id}}">Delete</a>
+    {{/if}}
   </div>
   <h2>Accessories</h2>
   <div class="accessories">
