--- a/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/cube/editCube.hbs
+++ b/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/cube/editCube.hbs
@@ -11,7 +11,7 @@
             <label for="difficulty">Difficulty</label>
             <select id="difficulty" name="difficultyLevel" />
             {{#each options}}
-                <option value="{{value}}" selected="{{selected}}">{{title}}</option>
+                <option value="{{value}}" {{#if selected}}selected{{/if}}>{{title}}</option>
             {{/each}}
             </select>
             <input type="submit" value="Edit">
