Add error notification on register

--- a/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/user/registerPage.hbs
+++ b/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/user/registerPage.hbs
@@ -1,4 +1,9 @@
 <main>
+    {{#if errorMessage}}
+    <div id="notifications">
+        <p id="notification-message">{{errorMessage}}</p>
+    </div>
+    {{/if}}
     <h1>Register Form</h1>
     <div class="form">
         <form method="POST">
