--- a/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/user/loginPage.hbs
+++ b/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/user/loginPage.hbs
@@ -1,4 +1,11 @@
 <main>
+    {{#if errorMessage}}
+    {{#each errorMessage}}
+    <div id="notifications">
+        <p id="notification-message">{{this}}</p>
+    </div>
+    {{/each}}
+    {{/if}}
     <h1>Login Form</h1>
     <div class="form">
         <form method="POST">
