--- a/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/cube/create.hbs
+++ b/JS Back End - Node.js - 2023/Cubicle Workshop/src/views/cube/create.hbs
@@ -1,4 +1,11 @@
 <main>
+  {{#if errorMessage}}
+  {{#each errorMessage}}
+  <div id="notifications">
+    <p id="notification-message">{{this}}</p>
+  </div>
+  {{/each}}
+  {{/if}}
   <h1>Create</h1>
   <div class="form">
     <form action='/cube/add' method="POST">
