--- a/JS Back End - Node.js - 2023/Petstagram/src/views/layouts/main.hbs
+++ b/JS Back End - Node.js - 2023/Petstagram/src/views/layouts/main.hbs
@@ -32,7 +32,7 @@
                     <ul class="nav-group">
                         <li class="nav-item">
                             <!-- Link to Catalog Page -->
-                            <a href="/catalog">
+                            <a href="/pets/catalog">
                                 <i>Catalog</i>
                             </a>
                         </li>
