render create pet page

--- a/JS Back End - Node.js - 2023/Petstagram/src/views/layouts/main.hbs
+++ b/JS Back End - Node.js - 2023/Petstagram/src/views/layouts/main.hbs
@@ -42,7 +42,7 @@
                         <!--For login users-->
                         <li class="nav-item">
                             <!-- Link to Add Photo Page -->
-                            <a href="/photo/add">
+                            <a href="/pets/add">
                                 <i>Add Photo</i>
                             </a>
                         </li>
