--- a/JS Back End - Node.js - 2023/Petstagram/src/views/pets/catalog.hbs
+++ b/JS Back End - Node.js - 2023/Petstagram/src/views/pets/catalog.hbs
@@ -6,14 +6,14 @@
 
             <!--If there are no photo yet!-->
             {{#if hasPets}}
-            {{#each pets}}
+            {{#each allPets}}
             <div class="card">
 
                 <!-- Start User Details and Image Location -->
                 <div class="top">
                     <div class="userDetails">
                         <!-- Link to User Profile Page -->
-                        <a href="#" action="#" method="#">
+                        <a href="/user/profile/{{owner._id}}">
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
@@ -26,24 +26,24 @@
                             <!-- Link to User Profile Page -->
                             <p>
                                 <!-- show user username -->
-                                MayaB
+                                {{owner.username}}
                             </p>
                             <!-- photo's location -->
-                            <span>Bansko, Bulgaria</span>
+                            <span>{{location}}</span>
                         </h3>
                     </div>
                 </div>
 
                 <!-- Start Pet Photo -->
                 <div class="imgBx">
-                    <img src="/images/axolotl.jpeg" alt="post" class="cover">
+                    <img src="{{image}}" alt="post" class="cover">
                 </div>
                 <!-- Name of Pet -->
-                <h5 class="petName">Name: Sal</h5>
+                <h5 class="petName">Name: {{name}}</h5>
                 <!-- Age of Pet -->
-                <h5 class="petAge">Age: 4</h5>
+                <h5 class="petAge">Age: {{age}}</h5>
                 <!-- Link to Photo Details Page -->
-                <a href="#" id="see-details">
+                <a href="/pets/details/{{_id}}" id="see-details">
                     <h4 class="details">See details</h4>
                 </a>
             </div>
