--- a/JS Back End - Node.js - 2023/Petstagram/src/views/pets/details.hbs
+++ b/JS Back End - Node.js - 2023/Petstagram/src/views/pets/details.hbs
@@ -15,7 +15,7 @@
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
-                                        <img src="/static/images/person.png" alt="img8">
+                                        <img src="/images/person.png" alt="img8">
                                     </div>
                                 </div>
                             </div>
@@ -25,24 +25,26 @@
                             <!-- Link to User Profile Details Page -->
                             <p>
                                 <!-- User's username -->
-                                MayaM
+                                {{foundPet.owner.username}}
                             </p>
                             <!-- photo's location -->
-                            <span>Bansko, Bulgaria</span>
+                            <span>{{foundPet.location}}</span>
 
                             <!-- IF the viewer is the creator of the photo -->
+                            {{#if isOwner}}
                             <div class="edit-delete-btns">
 
                                 <!-- Edit Pet Photo -->
                                 <a href="#">
-                                    <img class="edit-img" src="/static/images/edit-pen-icon-6.jpg" alt="edit button">
+                                    <img class="edit-img" src="/images/edit-pen-icon-6.jpg" alt="edit button">
                                 </a>
 
                                 <!--Delete Pet Photo -->
                                 <a href="#">
-                                    <img class="bin-img" src="/static/images/icon-remove-22.jpg" alt="bin button">
+                                    <img class="bin-img" src="/images/icon-remove-22.jpg" alt="bin button">
                                 </a>
                             </div>
+                            {{/if}}
 
                         </h3>
                     </div>
@@ -52,7 +54,7 @@
                 <!-- Start Pet Photo -->
                 <div class="imgBx">
                     <!-- Pet Photo -->
-                    <img src="/static/images/axolotl.jpeg" alt="post" class="cover">
+                    <img src="{{foundPet.image}}" alt="post" class="cover">
                 </div>
 
 
@@ -60,13 +62,13 @@
                 <div class="bottom">
 
                     <p class="message">
-                        <b class="petDescription">This is my pet!</b>
+                        <b class="petDescription">{{foundPet.description}}</b>
                     </p>
 
 
                     <!-- Photo description -->
                     <div class="pet-details">
-                        <p class="petName">Name: Sal</p>
+                        <p class="petName">Name: {{foundPet.name}}</p>
                         <p class="petAge">Age: 4</p>
                     </div>
                     <div class="comments">
