Render all coments from different users

--- a/JS Back End - Node.js - 2023/Petstagram/src/views/pets/details.hbs
+++ b/JS Back End - Node.js - 2023/Petstagram/src/views/pets/details.hbs
@@ -69,6 +69,7 @@
                     </div>
                     <div class="comments">
                         <div class="comments-top">
+                            {{#each foundPet.commentList}}
                             <div class="userDetails">
                                 <div class="comment-data">
                                     <div class="profilepic">
@@ -81,9 +82,12 @@
                                     </div>
 
                                     <!--User's username-->
-                                    <p><b>StevIvanov</b>- OMG where can i get one</p>
+                                    <p><b>{{user.username}}</b>- {{message}}</p>
                                 </div>
                             </div>
+                            {{else}}
+
+                            {{/each}}
                         </div>
                     </div>
                 </div>
@@ -91,8 +95,8 @@
                 {{#unless isOwner}}
                 <div class="addComments">
                     <!-- Start Add Comments Form -->
-                    <form method="GET" action="/pets/details/{{foundPet._id}}/comment">
-                        <textarea id="comment-textarea" name="" cols="40" rows="10"
+                    <form method="POST" action="/pets/details/{{foundPet._id}}/comment">
+                        <textarea id="comment-textarea" name="comment" cols="40" rows="10"
                             placeholder="Add comment..."></textarea>
                         <!-- Post Comments Button -->
                         <button type="submit">Post</button>
