--- a/JS Back End - Node.js - 2023/Petstagram/src/views/pets/details.hbs
+++ b/JS Back End - Node.js - 2023/Petstagram/src/views/pets/details.hbs
@@ -35,7 +35,7 @@
                             <div class="edit-delete-btns">
 
                                 <!-- Edit Pet Photo -->
-                                <a href="#">
+                                <a href="/pets/edit/{{foundPet._id}}">
                                     <img class="edit-img" src="/images/edit-pen-icon-6.jpg" alt="edit button">
                                 </a>
 
