--- a/JS Back End - Node.js - 2023/Gaming Team/src/views/layouts/main.hbs
+++ b/JS Back End - Node.js - 2023/Gaming Team/src/views/layouts/main.hbs
@@ -17,7 +17,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/games/catalog">All Games Code</a></li>
                 {{#if isAuthenticated}}
-                <li><a href="/search">Search</a></li>
+                <li><a href="/games/search">Search</a></li>
                 <li><a href="/games/create">Create Game Offer</a></li>
                 <li><a href="/user/logout">Logout</a></li>
                 {{else}}
@@ -27,9 +27,7 @@
             </ul>
         </nav>
     </header>
-
     {{{body}}}
-
     <footer>
         <p>Back-End 2023</p>
     </footer>
