--- a/JS Back End - Node.js - 2023/Gaming Team/src/views/user/register.hbs
+++ b/JS Back End - Node.js - 2023/Gaming Team/src/views/user/register.hbs
@@ -2,12 +2,13 @@
         <!-- In case of error, you should display div with class "errorContainer" -->
         <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
 
-
-        <!-- <div>
+    {{#each errorMessage}}
+        <div>
             <div class="errorContainer">
-                <p>Error</p>
+                <p>{{this}}</p>
             </div>
-        </div> -->
+        </div>
+    {{/each}}    
         
         <div class="register-box">
             <h1>Register</h1>
