--- a/JS Back End - Node.js - 2023/Gaming Team/src/views/games/catalog.hbs
+++ b/JS Back End - Node.js - 2023/Gaming Team/src/views/games/catalog.hbs
@@ -14,7 +14,7 @@
                     <p><span>Price: </span>${{price}}</p>
                 </div>
 
-                <a href="#" class="btn-details">Details</a>
+                <a href="/games/details/{{_id}}" class="btn-details">Details</a>
             </div>
             {{else}}
             <div class="no-offer">
