--- a/JS Back End - Node.js - 2023/Gaming Team/src/views/games/details.hbs
+++ b/JS Back End - Node.js - 2023/Gaming Team/src/views/games/details.hbs
@@ -21,11 +21,13 @@
                 </div>
                 {{/if}}
 
-                <!-- Logged in user who has not yet buy this game code-->
+                {{#if hasBought}}
+                <p class="buy-message">You have already bought this game</p>
+                {{else}}
+                {{#if isAuthenticated}}
                 <a href="/games/buy/{{foundGame._id}}" class="btn-buy">Buy</a>
-
-                <!-- Logged in user who has already buy this game code-->
-                <!-- <p class="buy-message">You have already bought this game</p> -->
+                {{/if}}
+                {{/if}}
             </div>
         </div>
     </section>
