Owner of the game do not see buy button

--- a/JS Back End - Node.js - 2023/Gaming Team/src/views/games/details.hbs
+++ b/JS Back End - Node.js - 2023/Gaming Team/src/views/games/details.hbs
@@ -25,7 +25,9 @@
                 <p class="buy-message">You have already bought this game</p>
                 {{else}}
                 {{#if isAuthenticated}}
+                {{#unless isOwner}}
                 <a href="/games/buy/{{foundGame._id}}" class="btn-buy">Buy</a>
+                {{/unless}}
                 {{/if}}
                 {{/if}}
             </div>
