--- a/JS Back End - Node.js - 2023/Gaming Team/src/views/games/details.hbs
+++ b/JS Back End - Node.js - 2023/Gaming Team/src/views/games/details.hbs
@@ -16,8 +16,8 @@
                 <!--Only for registered user and author of the publication -->
                 {{#if isOwner}}
                 <div class="author">
-                    <a href="#" class="btn-edit">Edit</a>
-                    <a href="#" class="btn-delete">Delete</a>
+                    <a href="/games/edit/{{foundGame._id}}" class="btn-edit">Edit</a>
+                    <a href="/games/delete/{{foundGame._id}}" class="btn-delete">Delete</a>
                 </div>
                 {{/if}}
 
