--- a/JS Back End - Node.js - 2023/Gaming Team/src/views/games/edit.hbs
+++ b/JS Back End - Node.js - 2023/Gaming Team/src/views/games/edit.hbs
@@ -1,12 +1,12 @@
 <main id="edit">
-    <!-- In case of error, you should display div with class "errorContainer" -->
-    <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+    <div>
+        <div class="errorContainer">
+            {{#each errorMessage}}
+            <p>{{this}}</p>
+            {{/each}}
+        </div>
+    </div>
 
-    <!-- <div>
-            <div class="errorContainer">
-                <p>Error</p>
-            </div>
-        </div> -->
     <section id="edit-container">
         <div class="edit-container-info">
             <h1>Edit Game Code Offer</h1>
@@ -20,8 +20,7 @@
                 <label>Name:</label>
                 <input type="text" id="name" name="name" value="{{foundGame.name}}">
                 <label>Image:</label>
-                <input type="text" id="image" name="image"
-                    placeholder="{{foundGame.image}}">
+                <input type="text" id="image" name="image" placeholder="{{foundGame.image}}" value="{{foundGame.image}}">
                 <label>Price:</label>
                 <input type="number" id="price" name="price" value="{{foundGame.price}}">
                 <label>Genre:</label>
