--- a/JS Back End - Node.js - 2023/Book Talk/src/public/css/edit.css
+++ b/JS Back End - Node.js - 2023/Book Talk/src/public/css/edit.css
@@ -1,86 +1,79 @@
-.editPage {
-    margin-top: 130px;
+.edit-form-container {
+  background: url(../image/banner-bg.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
-.editPage {
-	display: block;
-	background-color: rgb(255, 255, 255);
-	border: 1px solid rgb(156, 152, 152);
-	padding: 40px;
-	margin-bottom: 15px;
-	border-radius: 3px;
-	border: 1px solid;
-	box-shadow: 1px 2px 3px #888888;
-	width: 400px;
+.edit-form-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-.editPage h2 {
-	text-align: center;
-	margin-top: -10px;
-	text-shadow: 1px 1px rgb(65, 63, 63);
+.edit-form-container.active {
+  right: 0;
 }
 
-.editPage label {
-	display: none;
+.edit-form-container form {
+  background: #fff;
+  border: 0.1rem solid rgba(0, 0, 0, 0.1);
+  width: 40rem;
+  padding: 2rem;
+  box-shadow: 0 0 10px #00000070;
+  border-radius: 0.5rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
-.editPage input {
-	background-color: rgb(240, 230, 230);
-	border: 0.1px solid rgb(186, 184, 184);
-	border-radius: 3px;
-	height: 30px;
-	padding-left: 2px;
-	margin-top: 30px;
-	width: 320px;
-	font-size: 16px;
+.edit-form-container form h3 {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  color: #444;
+  text-align: center;
 }
 
-.editPage textarea {
-	background-color: rgb(240, 230, 230);
-	border: 0.1px solid rgb(186, 184, 184);
-	border-radius: 3px;
-	height: 100px;
-	padding-left: 2px;
-	margin-top: 30px;
-	width: 320px;
-	font-size: 16px;
-	resize: none;
-	font-family:Arial, Helvetica, sans-serif;
+.edit-form-container form label {
+  display: block;
+  font-size: 1.5rem;
+  padding-top: 1rem;
 }
 
-.editPage button {
-	color: white;
-	font-weight: bold;
-	font-size: 16px;
-	border: none;
-	width: 100%;
-	border-radius: 3px;
-	margin-top: 30px;
-	height: 30px;
-    box-shadow: 2px 3px #888888;
-    cursor: pointer;
+.edit-form-container form .box {
+  width: 100%;
+  margin: 0.7rem 0;
+  font-size: 1.3rem;
+  border: 0.1rem solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  padding: 1rem 1.2rem;
+  color: #444;
+  text-transform: none;
 }
 
-.editPage a {
-	color: white;
+.edit-form-container form .btn {
+  text-align: center;
+  width: 100%;
+  margin: 1.5rem 0;
 }
 
-.editPage label {
-	display: initial !important;
-	margin-top: 12px;
-	margin-right: 5px;
-	white-space: nowrap;
+.edit-form-container form p {
+  padding-top: 0.8rem;
+  color: #666;
+  font-size: 1.5rem;
 }
 
-.edit-photo input {
-	padding: 3px;
+.edit-form-container form p a {
+  color: #27ae60;
+  text-decoration: underline;
 }
 
-.edit-btn {
-	background-color: rgb(0, 102, 255);
+.edit-form-container form textarea {
+  resize: none;
 }
 
-
-.edit-delete button:hover {
-    box-shadow: none;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
