--- a/JS Back End - Node.js - 2023/Book Talk/src/public/css/profile.css
+++ b/JS Back End - Node.js - 2023/Book Talk/src/public/css/profile.css
@@ -1,181 +1,174 @@
-.profile {
-    margin: 140px 35% 0 38%;
+.profile-card {
+  width: 420px;
+  overflow: hidden;
+  text-align: center;
+  position: relative;
+  box-shadow: 0 0 10px #00000070;
+  margin: 0 auto;
+  margin-top: 50px;
 }
 
-.profile-data {
-    display: flex;
-    gap: 130px;
-    justify-content: center;
+.top-section {
+  padding: 60px 40px;
+  background: #27ae60;
 }
 
-.profile_img img {
-    width: 175px;
-    height: 175px;
-    margin-top: 10px;
-    border-radius: 50%;
-    object-fit: cover;
+.message,
+.notif {
+  position: absolute;
+  top: 40px;
+  font-size: 20px;
+  cursor: pointer;
+  color: #ffffff50;
 }
 
-.profile a {
-    color: black;
+.message {
+  right: 40px;
 }
 
-.profile .footer {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    font-size: 12px;
-    font-family: sans-serif;
+.notif {
+  left: 40px;
 }
 
-.delete {
-    display: block;
+.pic {
+  width: 150px;
+  height: 150px;
+  margin: auto;
+  margin-bottom: 20px;
+  border: 2px solid #ff6d51;
+  border-radius: 50%;
+  padding: 8px;
+  position: relative;
 }
 
-.no-posts-holder {
-    display: flex;
-    justify-content: center;
+.pic:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border: 1px solid #ff6d51;
+  left: 0;
+  top: 0;
+  box-sizing: border-box;
+  border-radius: 50%;
 }
 
-.no-posts {
-    width: 70% !important;
-    height: auto !important;
-    margin: 0 !important;
-    border: none !important;
-    box-shadow: none !important;
+.pic img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
-.personal .edit {
-    display: flex;
-    gap: 20px;
-    font-weight: lighter;
-    font-size: 30px;
-    margin-bottom: 15px;
-}
-
-.personal .edit p {
-    white-space: nowrap;
-}
-
-.personal .edit-img {
-    width: 25px;
-    margin-top: 8px;
-}
-
-.personal .bin-img {
-    width: 25px;
-    margin-left: -10px;
-    margin-top: 8px;
-}
-
-.personal .data {
-    display: flex;
-    margin-bottom: 15px;
-}
-
-.personal .data span {
-    margin-right: 5px;
-    font-size: 20px;
-}
-
-.personal .data p {
-    margin-right: 15px;
-    margin-top: 5px;
-}
-
-.names {
-    margin-bottom: 5px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.name {
+  color: #f1f1f1;
+  font-size: 28px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 
 .email {
-    margin-bottom: 5px;
+  font-size: 18px;
+  color: #222;
 }
 
-.statuses {
-    margin-bottom: 30px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    padding: 20px 0;
-    overflow: auto;
-    max-width: 850px;
-    justify-content: center;
+.bottom-section {
+  background: #f1f1f1;
+  padding: 60px 40px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  text-transform: uppercase;
 }
 
-.statuses .status {
-    display: inline-block;
-    border-radius: 50%;
-    overflow: auto;
-    width: 70px;
-    height: 70px;
-    min-width: 70px;
-    min-height: 70px;
-    background: linear-gradient(to right, red, orange);
-    padding: 2px;
-    margin-left: 15px;
-    cursor: pointer;
+.border {
+  width: 1px;
+  height: 20px;
+  background: #bbb;
+  margin: 0 30px;
 }
 
-.statuses .status .image {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    overflow: hidden;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid white;
+.bottom-section span {
+  font-size: 14px;
+  display: block;
 }
 
-.statuses .status img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.social-media {
+  position: absolute;
+  width: 100%;
+  top: -30px;
+  left: 0;
+  z-index: 1;
 }
 
-.head-pet {
-    display: block;
-    text-align: center;
+.social-media i {
+  width: 60px;
+  height: 60px;
+  background: #ff6d51;
+  border-radius: 50%;
+  color: #f1f1f1;
+  font-size: 20px;
+  line-height: 60px !important;
+  margin: 0 10px;
+  position: relative;
 }
 
-.head-pet p {
-    margin-left: 13px;
+.social-media i:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #ff6d51;
+  left: 0;
+  top: 0;
+  box-sizing: border-box;
+  border-radius: 50%;
+  z-index: -1;
+  transition: 0.4s linear;
 }
 
-.pet-photos {
-    border-top: 1px solid #ddd;
-    width: 850px;
+.social-media i:hover:after {
+  transform: scale(1.4);
+  opacity: 0;
 }
 
-.pet-photos img {
-    margin: 10px;
-    width: 400px;
-    height: 400px;
-    border-radius: 2px;
-    box-shadow: 4px 4px 4px 4px #888888;
-    object-fit: cover;
+.wish-books {
+  width: 100rem;
+  position: relative;
+  margin: 0 auto;
+  margin-top: 15px;
+  box-shadow: 0 0 10px #00000070;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  background-color: #f1f1f1;
+  opacity: 0.9;
 }
 
-.pet-photos img:hover {
-    box-shadow: none;
+.book {
+  background-color: #27ae60;
+  border-radius: 30px;
+  margin: 20px 30px;
+  margin-bottom: 10px;
+  width: 25rem;
+  height: 48rem;
+  position: relative;
+  color: rgb(19, 66, 27);
+  box-shadow: 0 0 10px #00000070;
 }
 
-.pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.info-container-profile img {
+  width: 100%;
+  height: 40rem;
+  border-radius: 30px;
 }
 
-.step-links {
-    text-shadow: 1px 1px #4b4848;
-}
-
-.step-links a:hover {
-    text-shadow: none;
+.no-record-in-profile {
+  font-size: 30px;
+  font-style: italic;
+  border: 1px solid rgba(0, 0, 0, 0.556);
+  padding: 20px;
+  margin: 3%;
 }
