--- a/JS Back End - Node.js - 2023/Book Talk/src/views/user/login.html
+++ b/JS Back End - Node.js - 2023/Book Talk/src/views/user/login.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Page</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="./css/style.css" />
 
 </head>
 
 <body>
+
+    <!-- In case of error, you should display div with class "errorContainer" -->
+    <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+    <!-- <div>
+        <div class="errorContainer">
+            <p>Error</p>
+        </div>
+    </div> -->
 
     <header class="header">
 
@@ -30,11 +38,17 @@
 
     </header>
 
-    <section id="not-found-page">
-        <div class="not-found-page-container">
-            <h1>404</h1>
-            <h2>Page Not Found</h2>
-        </div>
+    <section class="login-form-container">
+
+        <form action="">
+            <h3>Login</h3>
+            <label>Email</label>
+            <input type="email" name="" class="box" id="">
+            <label>Password</label>
+            <input type="password" name="" class="box" id="">
+            <input type="submit" value="Login" class="btn">
+            <p>Don't have an account ? <a href="#">Create one</a></p>
+        </form>
     </section>
 </body>
 
