--- a/JS Back End - Node.js - 2023/Book Talk/src/views/layouts/main.hbs
+++ b/JS Back End - Node.js - 2023/Book Talk/src/views/layouts/main.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Store</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
 </head>
@@ -17,15 +17,15 @@
 
         <div class="header">
             <nav class="navbar">
-                <a href="#">Home</a>
-                <a href="#">Catalog</a>
+                <a href="/">Home</a>
+                <a href="/books/catalog">Catalog</a>
                 <!--Only for logged user-->
-                <a href="#">Profile</a>
-                <a href="#">Create Review</a>
-                <a href="#">Logout</a>
+                <a href="/user/profile">Profile</a>
+                <a href="/books/create">Create Review</a>
+                <a href="/user/logout">Logout</a>
                 <!--Only for guest-->
-                <a href="#">Login</a>
-                <a href="#">Register</a>
+                <a href="/user/login">Login</a>
+                <a href="/user/register">Register</a>
             </nav>
         </div>
 
