--- a/JS Back End - Node.js - 2023/Book Talk/src/views/layouts/main.hbs
+++ b/JS Back End - Node.js - 2023/Book Talk/src/views/layouts/main.hbs
@@ -19,13 +19,16 @@
             <nav class="navbar">
                 <a href="/">Home</a>
                 <a href="/books/catalog">Catalog</a>
+                {{#if isAuthenticated}}
                 <!--Only for logged user-->
                 <a href="/user/profile">Profile</a>
                 <a href="/books/create">Create Review</a>
                 <a href="/user/logout">Logout</a>
+                {{else}}
                 <!--Only for guest-->
                 <a href="/user/login">Login</a>
                 <a href="/user/register">Register</a>
+                {{/if}}
             </nav>
         </div>
 
