--- a/JS Back End - Node.js - 2023/Book Talk/src/views/user/register.hbs
+++ b/JS Back End - Node.js - 2023/Book Talk/src/views/user/register.hbs
@@ -1,21 +1,24 @@
-<!-- In case of error, you should display div with class "errorContainer" -->
-<!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-<!--<div class="error-box">
-            <p>Error</p>
-        </div>-->
+  
+<div class="errorContainer">
+  {{#each errorMessage}}
+    <p>{{this}}</p>
+    {{/each}}
+</div>
+   
+
 <section class="register-form-container">
 
-    <form action="">
+    <form method="POST">
         <h3>Register</h3>
         <label>Email</label>
-        <input type="email" name="" class="box" id="">
+        <input type="email" name="email" class="box" id="">
         <label>Username</label>
-        <input type="text" name="" class="box" id="">
+        <input type="text" name="username" class="box" id="">
         <label>Password</label>
-        <input type="password" name="" class="box" id="">
+        <input type="password" name="password" class="box" id="">
         <label>Confirm Password</label>
-        <input type="password" name="" class="box" id="">
+        <input type="password" name="repeatPassword" class="box" id="">
         <input type="submit" value="Register" class="btn">
-        <p>Have an account ? <a href="#">Click here</a></p>
+        <p>Have an account ? <a href="/user/login">Click here</a></p>
     </form>
 </section>
