--- a/JS Back End - Node.js - 2023/Book Talk/src/views/user/login.hbs
+++ b/JS Back End - Node.js - 2023/Book Talk/src/views/user/login.hbs
@@ -1,20 +1,20 @@
-<!-- In case of error, you should display div with class "errorContainer" -->
-<!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-<!-- <div>
-        <div class="errorContainer">
-            <p>Error</p>
-        </div>
-    </div> -->
+{{#each errorMessage}}
+<div>
+    <div class="errorContainer">
+        <p>{{this}}</p>
+    </div>
+</div>
+{{/each}}
 
 <section class="login-form-container">
 
-    <form action="">
+    <form method="POST">
         <h3>Login</h3>
         <label>Email</label>
-        <input type="email" name="" class="box" id="">
+        <input type="email" name="email" class="box" id="">
         <label>Password</label>
-        <input type="password" name="" class="box" id="">
+        <input type="password" name="password" class="box" id="">
         <input type="submit" value="Login" class="btn">
-        <p>Don't have an account ? <a href="#">Create one</a></p>
+        <p>Don't have an account ? <a href="/user/register">Create one</a></p>
     </form>
 </section>
