--- a/JS Back End - Node.js - 2023/Book Talk/src/views/books/catalog.hbs
+++ b/JS Back End - Node.js - 2023/Book Talk/src/views/books/catalog.hbs
@@ -1,7 +1,7 @@
 <section class="catalog" id="catalog">
     <h2>Book Reviews</h2>
     <div class="container">
-        {{#each book}}
+        {{#each allBooks}}
         <!--If there are book reviews-->
         <div class="book">
             <div class="info-container">
