--- a/JS Back End - Node.js - 2023/Book Talk/src/views/books/catalog.hbs
+++ b/JS Back End - Node.js - 2023/Book Talk/src/views/books/catalog.hbs
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="details-btn">
-                <a href="/book/details/{{_id}}" class="details">Details</a>
+                <a href="/books/details/{{_id}}" class="details">Details</a>
             </div>
         </div>
         <!--If there are no book reviews-->
