--- a/JS Back End - Node.js - 2023/Book Talk/src/views/books/details.hbs
+++ b/JS Back End - Node.js - 2023/Book Talk/src/views/books/details.hbs
@@ -14,8 +14,8 @@
             <div class="buttons">
                 <!-- Only for registered user and author of the review -->
                 {{#if isOwner}}
-                <a href="#" class="btn-edit">Edit</a>
-                <a href="#" class="btn-delete">Delete</a>
+                <a href="/books/edit/{{foundBook._id}}" class="btn-edit">Edit</a>
+                <a href="/books/delete/{{foundBook._id}}" class="btn-delete">Delete</a>
                 {{/if}}
                 <!-- logged in user who has not yet wished book-->
                 {{#if isAuthenticated}}
