--- a/JS Back End - Node.js - 2023/Crypto Trade/src/views/crypto/create.hbs
+++ b/JS Back End - Node.js - 2023/Crypto Trade/src/views/crypto/create.hbs
@@ -21,10 +21,10 @@
                     <textarea id="description" name="description" placeholder="Introduce your coins..."></textarea>
                     <label>Payment method:</label>
                     <select id="payment" name="payment">
-                        <option value="crypto-wallet">Crypto Wallet</option>
-                        <option value="credit-card">Credit Card</option>
-                        <option value="debit-card">Debit Card</option>
-                        <option value="paypal">PayPal</option>
+                        <option value="Crypto Wallet">Crypto Wallet</option>
+                        <option value="Credit Card">Credit Card</option>
+                        <option value="Debit Card">Debit Card</option>
+                        <option value="PayPal">PayPal</option>
                     </select>
                     <input type="submit" id="btn" value="TRADE"></input>
                 </form>
