--- a/JS Back End - Node.js - 2023/Crypto Trade/src/views/crypto/details.hbs
+++ b/JS Back End - Node.js - 2023/Crypto Trade/src/views/crypto/details.hbs
@@ -15,20 +15,22 @@
             <div class="product-btn">
                 {{#if isOwner}}
                 <div class="author">
-                    <a href="/crypto/edit/{{_id}}" class="btn-edit">Edit</a>
-                    <a href="/crypto/delete/{{_id}}" class="btn-delete">Delete</a>
+                    <a href="/crypto/edit/{{foundCrypto._id}}" class="btn-edit">Edit</a>
+                    <a href="/crypto/delete/{{foundCrypto._id}}" class="btn-delete">Delete</a>
                 </div>
                 {{/if}}
 
                 {{#if hasBought}}
                 <p class="buy-message">You already bought these crypto coins.</p>
-                {{/if}}
+                {{else}}
                 {{#if isAuthenticated}}
                 {{#unless isOwner}}
-                <a href="#" class="btn-buy">Buy</a>
+                <a href="/crypto/buy/{{foundCrypto._id}}" class="btn-buy">Buy</a>
                 {{/unless}}
                 {{/if}}
-                
+                {{/if}}
+
+
             </div>
         </div>
     </section>
