Render auction details page

--- a/JS Back End - Node.js - 2023/Auction House/src/views/layouts/main.hbs
+++ b/JS Back End - Node.js - 2023/Auction House/src/views/layouts/main.hbs
@@ -20,7 +20,7 @@
             <nav class="main-nav nav-mid">
                 <ul>
                     <li>
-                        <a href="/auction/browse">Browse</a>
+                        <a href="/auction/catalog">Browse</a>
                     </li>
                     <!-- Bonus action -->
                     <!--
