--- a/JS Back End - Node.js - 2023/Auction House/src/views/auction/create.hbs
+++ b/JS Back End - Node.js - 2023/Auction House/src/views/auction/create.hbs
@@ -16,10 +16,10 @@
                 <div class="col aligned">
                     <label>
                         <span>Title</span>
-                        <input type="text" name=""></label>
+                        <input type="text" name="title"></label>
                     <label>
                         <span>Category</span>
-                        <select name="">
+                        <select name="category">
                             <option value="estate">Real Estate</option>
                             <option value="vehicles">Vehicles</option>
                             <option value="furniture">Furniture</option>
@@ -29,16 +29,16 @@
                     </label>
                     <label>
                         <span>Image URL</span>
-                        <input type="text" name=""></label>
+                        <input type="text" name="image"></label>
                     <label>
                         <span>Starting price</span>
-                        <input type="number" name=""></label>
+                        <input type="number" name="price"></label>
                 </div>
 
                 <div class="content pad-med align-center vertical">
                     <label>
                         <span>Description</span>
-                        <textarea name=""></textarea>
+                        <textarea name="description"></textarea>
                     </label>
 
                     <div class="align-center">
