Add click event handler

--- a/Angular/angular-playground/src/app/warning-alert/warning-alert.component.html
+++ b/Angular/angular-playground/src/app/warning-alert/warning-alert.component.html
@@ -1,3 +1,4 @@
 <p>Warning!</p>
+<button (click)="warningClick()">Warning</button>
 <warning-first></warning-first>
 <warning-second></warning-second>
