Solved practicing databinding

--- a/Angular/angular-playground/src/app/warning-alert/warning-alert.component.css
+++ b/Angular/angular-playground/src/app/warning-alert/warning-alert.component.css
@@ -1,5 +1,4 @@
-p {
-    color:red;
-    background-color: blue;
-    border: 1px salmon;
+h3 {
+    color:lightskyblue;
+    border: 1px solid salmon;
 }
