Added new home page view

--- a/Angular/SoftUni-Forum/src/app/core/main-container/main-container.component.html
+++ b/Angular/SoftUni-Forum/src/app/core/main-container/main-container.component.html
@@ -1,11 +1,12 @@
 <div class="container">
     <main>
-        <app-themes>
+        <app-home></app-home>
+        <!-- <app-themes>
 
-        </app-themes>
+        </app-themes> -->
     </main>
     <!-- aside component  -->
-    <app-aside>
+    <!-- <app-aside>
 
-    </app-aside>
+    </app-aside> -->
 </div>
