Add responsive welcome message in all themes

--- a/Angular/SoftUni-Forum/src/app/core/main-container/main-container.component.html
+++ b/Angular/SoftUni-Forum/src/app/core/main-container/main-container.component.html
@@ -1,13 +1,5 @@
 <div class="container">
-    <main>
-        <!-- <app-home></app-home> -->
-        <!-- <app-themes>
-
-        </app-themes> -->
-        <router-outlet></router-outlet>
-    </main>
-    <!-- aside component  -->
-    <!-- <app-aside>
-
-    </app-aside> -->
+    
+    <app-themes></app-themes>
+    <app-aside></app-aside>
 </div>
