Add home component to theme details page

--- a/Angular/SoftUni-Forum/src/app/themes/details-theme/details-theme.component.html
+++ b/Angular/SoftUni-Forum/src/app/themes/details-theme/details-theme.component.html
@@ -1,6 +1,7 @@
-
+<app-home></app-home>
     <!-- theme content  -->
     <div class="theme-content" *ngIf="currentTheme">
+      
         <!-- theme-title  -->
         <div class="theme-title">
             <div class="theme-name-wrapper">
