--- a/Angular/SoftUni-Forum/src/app/themes/all-themes/themes.component.html
+++ b/Angular/SoftUni-Forum/src/app/themes/all-themes/themes.component.html
@@ -16,7 +16,8 @@
                         </div>
                     </div>
                     <div class="subscribers">
-                        <button class="subscribe" *ngIf="isLogged">Subscribe</button>
+                        <button class="subscribe" *ngIf="isLogged && !hasLiked">Subscribe</button>
+                        <button class="unsubscribe" *ngIf="isLogged && hasLiked">Unsubscribe</button>
                         <p>Subscribers: <span>{{theme.subscribers.length}}</span></p>
                     </div>
                 </div>
