Add reactive form group for passwords

--- a/Angular/Forms-Playground/forms/src/app/register-form-reactive/register-form-reactive.component.html
+++ b/Angular/Forms-Playground/forms/src/app/register-form-reactive/register-form-reactive.component.html
@@ -6,27 +6,33 @@
             <h1>Registration Form</h1>
 
             <p class="field field-icon">
-                <label for="username"><span><i class="fas fa-user"></i></span></label>
-                <input type="text" name="username" id="username" class="error" placeholder="Mark Ulrich" formControlName="name">
+                <label for="name"><span><i class="fas fa-user"></i></span></label>
+                <input type="text" name="name" id="name" placeholder="Mark Ulrich" formControlName="name">
             </p>
 
-            <!-- if error -->
-            <!-- <p class="error">
-                Message for Error
-            </p> -->
-            <!-- end if error -->
+            <p class="error" *ngIf="!registerForm.get('name')?.valid && registerForm.get('name')?.touched">
+                Incorrect name
+            </p>
 
             <p class="field field-icon">
                 <label for="email"><span><i class="fas fa-envelope"></i></span></label>
                 <input type="text" name="email" id="email" placeholder="marк@gmial.com" formControlName="email">
             </p>
 
+            <p class="error" *ngIf="!registerForm.get('email')?.valid && registerForm.get('email')?.touched">
+                Incorrect email
+            </p>
+
             <p class="field field-icon">
                 <label for="tel"><span><i class="fas fa-phone"></i></span></label>
-                <select name="tel" id="tel" class="tel" formControlName="code" >
+                <select name="tel" id="tel" class="tel" formControlName="code">
                     <option *ngFor="let code of phoneCodes" [value]="code">{{code}}</option>
                 </select>
                 <input type="text" name="tel" id="tel" placeholder="888 888" formControlName="tel">
+            </p>
+
+            <p class="error" *ngIf="!registerForm.get('tel')?.valid && registerForm.get('tel')?.touched">
+                Incorrect telephone
             </p>
 
             <p class="field field-icon">
@@ -36,15 +42,29 @@
                 </select>
             </p>
 
+            <p class="error" *ngIf="!registerForm.get('job')?.valid && registerForm.get('job')?.touched">
+                Incorrect job
+            </p>
+
+            <div formGroupName="userPassword">
             <p class="field field-icon">
                 <label for="password"><span><i class="fas fa-lock"></i></span></label>
-                <input type="password" name="password" id="password" placeholder="******" formControlName="password" >
+                <input type="password" name="password" id="password" placeholder="******" formControlName="password">
+            </p>
+
+            <p class="error" *ngIf="!registerForm.get('userPassword.password')?.valid && registerForm.get('userPassword.password')?.touched">
+                Incorrect password
             </p>
 
             <p class="field field-icon">
                 <label for="re-password"><span><i class="fas fa-lock"></i></span></label>
                 <input type="password" name="re-password" id="re-password" placeholder="******" formControlName="rePassword">
             </p>
+            
+            <p class="error" *ngIf="!registerForm.get('userPassword.rePassword')?.valid && registerForm.get('userPassword.rePassword')?.touched">
+                Incorrect re-password
+            </p>
+        </div>
 
             <p>
                 <button>Create Account</button>
