Added login TD form with validation

--- a/Angular/SoftUni-Forum/src/app/user/login/login.component.html
+++ b/Angular/SoftUni-Forum/src/app/user/login/login.component.html
@@ -1,32 +1,50 @@
 <div class="container">
-    <form class="login" action="" method="post">
+    <form class="login" #form="ngForm" (ngSubmit)="onSubmit(form)">
 
         <fieldset>
             <h2>Login Form</h2>
 
+            <!-- EMAIL INPUT -->
             <p class="field field-icon">
                 <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-                <input class="input-error" type="email" name="email" id="email" placeholder="john.doe@gmail.com">
+                <input  type="email" name="email" id="email" placeholder="john.doe@gmail.com" 
+                ngModel
+                #email="ngModel"
+                required
+                pattern="^[a-zA-Z0-9._%+-]{6,}@gmail\.(bg|com)$"
+                >
             </p>
-            <p class="error">
-                Email is required!
-            </p>
-            <!-- <p class="error">
-                Email is not valid!
-            </p> -->
+            <ng-container *ngIf="email.touched">
 
+                <p class="error" *ngIf="email.errors?.['required']">
+                    Email is required!
+                </p>
+                <p class="error" *ngIf="email.errors?.['pattern']">
+                    Email is not valid!
+                </p>
+            </ng-container>
+
+            <!-- PASSWORD INPUT -->
             <p class="field field-icon">
                 <label for="password"><span><i class="fas fa-lock"></i></span></label>
-                <input type="password" name="password" id="password" placeholder="******">
+                <input type="password" name="password" id="password" placeholder="******"
+                ngModel
+                #password="ngModel"
+                required
+                minlength="5"
+                >
             </p>
-            <!-- <p class="error">
+            <ng-container *ngIf="password.touched">
+            <p class="error" *ngIf="password.errors?.['required']">
                 Password is required!
             </p>
-            <p class="error">
-                Password must be at least 4 characters!
-            </p> -->
+            <p class="error" *ngIf="password.errors?.['minlength']">
+                Password must be at least 5 characters!
+            </p> 
+            </ng-container>
 
-            <button (click)="login()">Login</button>
+
+            <button>Login</button>
 
             <p class="text-center">
                 Have an account?
