--- a/Angular/SoftUni-Forum/src/app/user/login/login.component.css
+++ b/Angular/SoftUni-Forum/src/app/user/login/login.component.css
@@ -83,3 +83,8 @@ p.error {
 .input-error {
     border-left-color: red;
 }
+
+input.ng-invalid.ng-touched {
+    border-left: 5px solid #A94442;
+    /* red */
+}
