--- a/Angular/SoftUni-Forum/src/app/user/register/register.component.css
+++ b/Angular/SoftUni-Forum/src/app/user/register/register.component.css
@@ -80,6 +80,7 @@ p.error {
     padding-top: 0;
 }
 
-.input-error {
-    border-left-color: red;
+input.ng-invalid.ng-touched {
+    border-left: 5px solid #A94442;
+    /* red */
 }
