--- a/Angular/SoftUni-Forum/src/app/user/register/register.component.html
+++ b/Angular/SoftUni-Forum/src/app/user/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="register" action="" method="post">
+    <form class="register" #form="ngForm" (submit)="onRegister(form)">
 
         <fieldset>
             <h2>Registration Form</h2>
@@ -7,23 +7,41 @@
             <!-- username -->
             <p class="field field-icon">
                 <label for="username"><span><i class="fas fa-user"></i></span></label>
-                <input class="input-error" type="text" name="username" id="username" placeholder="Johny">
+                <input class="input-error" type="text" name="username" id="username" placeholder="Johny"
+                #username="ngModel"
+                ngModel
+                required
+                minlength="5"
+                >
             </p>
-            <p class="error">
-                Username is required!
-            </p>
+            <ng-container *ngIf="username.touched">
+                <p class="error" *ngIf="username.errors?.['required']">
+                    Username is required!
+                </p>
+                <p class="error" *ngIf="username.errors?.['minlength']">
+                    Username is less than 5 symbols!
+                </p>
+            </ng-container>
+
 
             <!-- email -->
             <p class="field field-icon">
                 <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-                <input type="email" name="email" id="email" placeholder="john.doe@gmail.com">
+                <input type="email" name="email" id="email" placeholder="john.doe@gmail.com"
+                #email="ngModel"
+                ngModel
+                pattern="^[a-zA-Z0-9._%+-]{6,}@gmail\.(bg|com)$"
+                required
+                >
             </p>
-            <!-- <p class="error">
-                Email is required!
-            </p>
-            <p class="error">
-                Email is not valid!
-            </p> -->
+            <ng-container *ngIf="email.touched">
+                <p class="error" *ngIf="email.errors?.['required']">
+                    Email is required!
+                </p>
+                <p class="error" *ngIf="email.errors?.['pattern']">
+                    Email is not valid!
+                </p>
+            </ng-container>
 
             <!-- telephone -->
             <p class="field field-icon">
@@ -31,13 +49,19 @@
                 <select name="select-tel" id="select-tel" class="tel">
                     <option value="00359">+359</option>
                 </select>
-                <input type="text" name="tel" id="tel" placeholder="885 888 888">
+                <input type="text" name="tel" id="tel" placeholder="885 888 888"
+                #telephone="ngModel"
+                ngModel
+                >
             </p>
 
             <!-- password -->
             <p class="field field-icon">
                 <label for="password"><span><i class="fas fa-lock"></i></span></label>
-                <input type="password" name="password" id="password" placeholder="******">
+                <input type="password" name="password" id="password" placeholder="******"
+                #password="ngModel"
+                ngModel
+                >
             </p>
             <!-- <p class="error">
                 Password is required!
@@ -49,11 +73,14 @@
             <!-- rePassword -->
             <p class="field field-icon">
                 <label for="rePassword"><span><i class="fas fa-lock"></i></span></label>
-                <input type="password" name="rePassword" id="rePassword" placeholder="******">
+                <input type="password" name="rePassword" id="rePassword" placeholder="******"
+                #rePassword="ngModel"
+                ngModel
+                >
             </p>
             <!-- <p class="error">Repeat Password does not match password!</p> -->
 
-            <button disabled>Create Account</button>
+            <button>Create Account</button>
 
             <p class="text-center">
                 Have an account?
